objects/custom_object_1__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>obj1s</relationshipLabel>
        <relationshipName>obj1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>email_field__c</fullName>
        <label>email field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field_1__c</fullName>
        <label>field 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>field_2__c</fullName>
        <label>field 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_field__c</fullName>
        <label>phone field</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>picklist_MS__c</fullName>
        <label>picklist MS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist_field__c</fullName>
        <label>picklist field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>custom object 1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>custom object 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>obj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>